# hpc

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark.cpp  benchmark.h  compile  exclude  hello_world.cpp  log-to-node  mat_mult.cpp  pi.cpp  pi.html  results.csv  stencil.ipynb  stencil.out  sync-files
base/: CMakeLists.txt
base/ext/: .gitignore
base/include/hpc/: benchmark.h  config.cuh  copy.cuh  cpu_timer.h  cuda_timer.cuh  dev_buffer.cuh  dev_var.cuh  experiment.h  host_buffer.cuh  math.cuh  math.h  omp_timer.h  scoped_timer.h  stream.cuh  timer.h
base/src/: benchmark.cpp  config.cu  cpu_timer.cpp  cuda_timer.cu  experiment.cpp  omp_timer.cpp  stream.cu
brandes/code/: cpu_coo.h  cpu_csr.h  cpu_stride_csr.h  cpu_virt_csr.h  dev_coo.cuh  dev_csr.cuh  dev_stride_csr.h  dev_virt_csr.cuh  edge.cuh  graph.h  main.cu  stock.h  stride.cuh  vertex.cuh  virtual.cuh
brandes/papers/: fetch.sh
hello_world/: CMakeLists.txt  hello_world.cpp
mat_mult/: CMakeLists.txt  mat_mult.cpp
mpi_intro/: mpi_intro.cpp
pi/: CMakeLists.txt  pi.cpp  plots.ipynb
raytracer/: base.cuh  bitmap.cpp  bitmap.cu  bitmap.h  cpu.h  plots.ipynb  raytracer.cu  results.csv  stock.cuh  tex_bitmap.cu  tex_bitmap.cuh  v1.cuh
reverseArray/: reverseArray.cu
stencil/: CMakeLists.txt  plots.html  plots.ipynb  results.csv  stencil.cu
streams/: plots.ipynb  report.ipynb  results-v2.csv  results-v3.csv  results-v4.csv  results.csv  streams.cu
